--- a/examenJunio/api/.htaccess
+++ b/examenJunio/api/.htaccess
@@ -4,7 +4,7 @@ RewriteEngine On
 # Ruta completa desde htdocs hasta la carpeta "api".
 # Si el path hasta la carpeta es C:\xampp\htdocs\examen\api,
 # habría que poner lo siguiente: RewriteBase /examen/api/
-RewriteBase /pcw/examen/api/
+RewriteBase /pcw/examenJunio/api/
 
 ##################################################
 ### REGLAS PARA PEDIR LISTA DE IMÁGENES
